--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
     <meta name="distribution" content="global"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
