--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Contacto - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-          content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064<"/>
+          content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
@@ -424,6 +424,10 @@
                             </div>
                             <div id="faq_b1" class="collapse show" aria-labelledby="faq_h1"
                                  data-parent="#accordionExample">
+                                <div style="display: none">
+                                    ¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con
+                                    la tarifa más baja! +52 (55) 5512 - 7064
+                                </div>
                                 <div class="card-body">
                                     El hotel no cuenta con estacionamiento en las instalaciones, pero tenemos un
                                     convenio con el estacionamiento DePrisa ubicado en Isabel la Católica esquina con 16
