--- a/contact.html
+++ b/contact.html
@@ -386,7 +386,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center myc">
-                        <img src="./assets/logos/puntomx_ico.ico" alt="Logo en blanco del Restaurante MX"
+                        <img src="./assets/logos/puntomx_ico.ico" alt="Hotel Punto MX - Contáctanos"
                              style="max-width: 90%;">
                         <p class="fh5co-counter-label"
                            style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">
