--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
   <meta property="og:site_name" content="Hoteles Punto MX - El punto más cómodo de México"/>
-  <meta property="og:description" content="Si viajas a la ciudad de México hospedate en hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
+  <meta property="og:description" content="Si viajas a la ciudad de México hospedate en Hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
   <meta name="twitter:title" content="Hotel Punto MX - El punto más cómodo de México" />
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
@@ -77,6 +77,34 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<!------ modals ------->
+<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: var(--color-primario);">
+        <h5 class="modal-title fontWhite cursiveFont" id="">Hotel Punto MX - Descripcion</h5>
+        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>-->
+      </div>
+      <div class="modal-body fontHover">
+        <small>
+          <br>
+          Si viajas a la ciudad de México hospedate en Hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje
+        </small>
+        <ul class="banner_well">
+          <li style="color: #0c5460!important;"><i class="fa-solid fa-drumstick-bite fontHover" style="color: #0c5460!important;"></i><small>Desayuno Buffete</small></li>
+          <li style="color: #0c5460!important;"><i class="fa-solid fa-bed fontHover" style="color: #0c5460!important;"></i><small>Upgrade gratis</small></li>
+          <li style="color: #0c5460!important;"><i class="fa-solid fa-hand-holding-dollar fontHover" style="color: #0c5460!important;"></i><small>Mejor precio</small></li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal" style="padding: 5px 15px!important; border-radius: 20px;">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!------ modals ------->
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
