--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="distribution" content="global"/>
     <!------------------------------------------------->
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Contáctanos - Hotel Punto MX"/>
+    <meta property="og:image" content=""/>
+    <meta property="og:url" content="https://hotelespuntomx.com"/>
+    <meta property="og:site_name" content="Contacto - Hotel Punto MX"/>
+    <meta property="og:description"
+          content="¿Tienes alguna duda? Contáctanos | Preguntas Frecuentes | Ubicación | ¡Reserva con la tarifa más baja! +52 (55) 5512 - 7064"/>
+    <meta name="twitter:title" content=""/>
+    <meta name="twitter:image" content=""/>
+    <meta name="twitter:url" content=""/>
+    <meta name="twitter:card" content=""/>
+
+    <!------------------------------------------------->
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -42,16 +55,6 @@
         gtag('config', 'G-BWCT951Z6Z');
     </script>
     <!------------------------------------------------->
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
-    <meta name="twitter:title" content=""/>
-    <meta name="twitter:image" content=""/>
-    <meta name="twitter:url" content=""/>
-    <meta name="twitter:card" content=""/>
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/superfish.css">
