--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
 -->
 <!------------>
 <!-- Modal especial event-->
-<!-- Usar este fragmento de codigo para mostrar promociones del mes || Cambiar la imagen-->
+<!-- Usar este fragmento de codigo para mostrar promociones del mes // Carrusel || Cambiar la imagen-->
+<!--
 <div class="modal fade" id="modalSep" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
   <div class="modal-dialog modal-lg my-mod-d">
     <div class="modal-content my-mod-c">
@@ -326,6 +327,7 @@
     </div>
   </div>
 </div>
+-->
 <!-- Fin Modal Event-->
 <!-- Modal Paquete Feb -->
 <div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
@@ -999,7 +1001,7 @@
 <script src="js/particles.js"></script>
 <script>
   $(document).ready(function() {
-    $('#modalSep').modal('show');
+    $('#modalReserv').modal('show');
   });
   /*
   const slider = document.querySelector('.gallery');
