--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   <div class="modal-dialog modal-lg my-mod-d">
     <div class="modal-content my-mod-c">
       <div class="modal-body my-mod-b">
-        <!-- carousel -->
+
         <div id='carouselExampleIndicators' class='carousel slide' data-ride='carousel'>
           <ol class='carousel-indicators'>
             <li data-target='#carouselExampleIndicators' data-slide-to='0' class='active'></li>
@@ -320,10 +320,6 @@
           </a>
         </div>
       </div>
-      <!--
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>-->
     </div>
   </div>
 </div>
@@ -348,12 +344,20 @@
     <div class="modal-content my-mod-c">
       <div class="modal-body">
         <!-- carousel -->
+              <img class='img-fluid' id="img-dos" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+      </div>
+    </div>
+  </div>
+</div>
+<!------------>
+<!-- Modal -->
+<div class="modal fade" id="modalReserv1" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+  <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 200px;text-align: center;">
+    <div class="modal-content my-mod-c">
+      <div class="modal-body">
+        <!-- carousel -->
               <img class='img-fluid' id="img-tres" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
       </div>
-      <!--
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>-->
     </div>
   </div>
 </div>
@@ -486,7 +490,7 @@
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
         <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
-        <a type="button" data-toggle="modal" data-target="#modalReserv"  class="myReserv-flotante text-rsv"></a>
+        <a type="button" data-toggle="modal" data-target="#modalReserv1"  class="myReserv-flotante text-rsv"></a>
       </div>
     </div>
     <!--
