--- a/cafe.html
+++ b/cafe.html
@@ -395,25 +395,27 @@
                     </div>
 
                     <!--Botón-->
-                    <div class="col-md-4 col-md-offset-2">
+                    <div class="col-md-4 col-md-offset-4">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
                                 <!--<p><a href="./files/carta-cafe-esp-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i class="ti-angle-right"></i></a></p>-->
-                                <p><a href="./files/menus/110722_M_CafeMX.pdf" target="_blank"
-                                      class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i
+                                <p><a href="#" target="_blank"
+                                      class="btn btn-primary btn-luxe-primary">Ver Menú<i
                                         class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div><!--Botón-->
+                    <!--
                     <div class="col-md-4">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
-                                <p><a href="./files/carta-cafe-ingles-qr.pdf" target="_blank"
+                                <p><a href="#" target="_blank"
                                       class="btn btn-primary btn-luxe-primary">Ver Menú (Inglés) <i
                                         class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
