--- a/restaurant.html
+++ b/restaurant.html
@@ -419,13 +419,22 @@
                     </div>
 
                     <!--Botón-->
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-md-4 col-md-offset-2">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
-                                <p><a href="./files/carta-qr_nov.pdf" target="_blank"
-                                      class="btn btn-primary btn-luxe-primary">Ver Menú <i
+                                <p><a href="./files/menus2024/nuevo-menu-2024.pdf" target="_blank"
+                                      class="btn btn-primary btn-luxe-primary">Menú Restaurante<i
                                         class="ti-angle-right"></i></a></p>
                                 <!--<p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="hotel-content1">
+                            <div class="desc" style="justify-content: center; text-align: center;">
+                                <p><a href="./files/menus2024/cocteleria-2024.pdf" target="_blank"
+                                      class="btn btn-primary btn-luxe-primary">Menú Coctelería<i
+                                        class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div>
