--- a/ng/index.html
+++ b/ng/index.html
@@ -32,14 +32,14 @@
     <link rel="stylesheet" href="css/themify-icons.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="css/mybtn_flot.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <link rel="stylesheet" href="css/t-style.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/flexslider.css">
+    <link rel="stylesheet" href="../css/mybtn_flot.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/datepicker.css"/>
+    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    <link rel="stylesheet" href="../css/t-style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!------------------------------------------------->
 </head>
@@ -276,7 +276,30 @@
 </div>
 <!------------>
 <!-- Modal -->
-
+<!-- Modal -->
+<div class="modal fade" id="modalReserv1" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 200px;text-align: center;">
+        <div class="modal-content my-mod-c">
+            <div class="modal-body">
+                <!-- carousel -->
+                <img class='img-fluid' id="img-tres" src='../images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal Paquete Feb -->
+<div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body center-block align-items-center align-middle">
+                <video autoplay muted loop id="myVideo" style="margin-top: 150px;height: 500px;">
+                    <source src="../images/february/vid.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </div>
+</div>
+<!------------>
 <!------------>
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
@@ -415,6 +438,16 @@
                 </ul>
             </div>
         </aside>
+
+        <div class="container">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Book here</a>
+                <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
+                <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
+                <a type="button" data-toggle="modal" data-target="#modalReserv1"  class="myReserv-flotante text-rsv"></a>
+            </div>
+        </div>
+        <!--
         <div class="container">
             <div class="row">
                 <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
@@ -422,7 +455,7 @@
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
-        </div>
+        </div>-->
         <!--
         <div class="wrap">
           <div class="container">
@@ -501,7 +534,7 @@
                     <div class="feature-full-1col">
                         <div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,087.87/night</span></p>
+                                <p><small>Reserve from</small><span>$1,500.00mxn/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -518,7 +551,7 @@
                     <div class="feature-full-1col" style="flex-direction: row-reverse">
                         <div class="image" style="background-image: url(assets/webp/DELUXE_CAMA_QUEEN.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,221.76/night</span></p>
+                                <p><small>Reserve from</small><span>$1,650.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -536,7 +569,7 @@
                     <div class="feature-full-1col">
                         <div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,297.08/night</span></p>
+                                <p><small>Reserve from</small><span>$1,750.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -553,7 +586,7 @@
                     <div class="feature-full-1col" style="flex-direction: row-reverse;">
                         <div class="image" style="background-image: url(assets/webp/MASTER_SUITE.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,958.16/night</span></p>
+                                <p><small>Reserve from</small><span>$2,300.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -577,7 +610,7 @@
                     <div class="feature-full-1col">
                         <div class="image" style="background-image: url(./assets/webp/SUITE_CON_TINA_4.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,589.96/night</span></p>
+                                <p><small>Reserve from</small><span>$2,000.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -605,7 +638,7 @@
                     <div class="feature-full-1col" style="flex-direction: row-reverse">
                         <div class="image" style="background-image: url(assets/webp/SUITE_CON_JACUZZI_6.jpeg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,589.96/night</span></p>
+                                <p><small>Reserve from</small><span>$2,000.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -629,7 +662,7 @@
                     <div class="feature-full-1col">
                         <div class="image" style="background-image: url(./assets/webp/JR_SUITEHABITACION.jpg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,380.76/night</span></p>
+                                <p><small>Reserve from</small><span>$1,850.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
@@ -653,7 +686,7 @@
                     <div class="feature-full-1col" style="flex-direction: row-reverse;">
                         <div class="image" style="background-image: url(./assets/webp/SCVISTA_1.jpg);">
                             <div class="descrip text-center">
-                                <p><small>Reserve for</small><span>$1,434.00/night</span></p>
+                                <p><small>Reserve from</small><span>$2,000.00/night</span></p>
                             </div>
                         </div>
                         <div class="desc">
